--- a/style.css
+++ b/style.css
@@ -494,9 +494,10 @@ input[type="submit"]
     margin: 10px 0 10px 0;
 }
 
-input:last-of-type:hover {
+/*input:last-of-type:hover {
     background: #77a198;
-}
+}*/
+
 /* Checkout page */
 .fraktType > img
 {
@@ -572,16 +573,20 @@ main > section:last-child > form
 {
     width: 1000px;
     margin: 30px auto 40px auto;
-    height: 700px;
+    height: 900px;
 }
 main > section:last-child > form > .fraktInfo > fieldset
 {
     display: flex;
-    flex-direction: column;
-    height: 650px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    height: 900px;
     color: #62a395;
     border: 0.8pt solid #62a395;
     padding: 20px;
+    margin-bottom: 50px;
 }
 
 main > section:last-child > form > .fraktInfo > fieldset > fieldset
@@ -612,6 +617,15 @@ main > section:last-child > form > .fraktInfo > fieldset > fieldset > img
 {
     padding: 0 5px 0 10px;
 }
+button[type="submit"]
+{
+    background-color: #62a395;
+    width: 200px;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin: 10px 0 10px 0;
+}
 
 /* Footer section här */
 
@@ -623,6 +637,7 @@ footer
     background-color: #444444;
     width: 100%;
     height: 90px;
+    margin-top: 50px;
 }
 footer > ul
 {
