--- a/style.css
+++ b/style.css
@@ -234,6 +234,12 @@ main > #index-topSeller > .products > .index-Product >.shoppingBag
     height: 25px;
 
 }
+.totalItemsInShoppingbag{
+    position: relative;
+    right: 35px;
+    bottom: 7px;
+    font-size: 8.5pt;
+}
 
 /* topSeller section dam herr barn */
 #containerCategories
