--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ main > #index-topSeller > .products > .index-Product >.shoppingBag
     height: 25px;
 }
 
- .shoppingBag{
+ #shoppingBag{
     background: url("images/icons/icon_shopping_bag.png") no-repeat;
     background-size: cover;
     border: none;
@@ -234,7 +234,7 @@ main > #index-topSeller > .products > .index-Product >.shoppingBag
     height: 25px;
 
 }
-.totalItemsInShoppingbag{
+#totalItemsInShoppingbag{
     position: relative;
     right: 35px;
     bottom: 7px;
